--- a/src/App.css
+++ b/src/App.css
@@ -102,20 +102,16 @@ h1, h2, h3 {
   padding: 15px;
   margin: 10px 0;
 }
-.col-md-3 {
-  width: 25%;
-  margin: 10px;
-}
-.col-md-6 {
-  width: 50%;
-  margin: 10px;  
-}
 .col-md-1 {
   width: 8.3333%;
   margin: 10px;
 }
 .col-md-2 {
   width: 16.6666%;
+  margin: 10px;
+}
+.col-md-3 {
+  width: 25%;
   margin: 10px;
 }
 .col-md-4 {
@@ -125,6 +121,10 @@ h1, h2, h3 {
 .col-md-5 {
   width: 41.6666%;
   margin: 10px;
+}
+.col-md-6 {
+  width: 50%;
+  margin: 10px;  
 }
 .col-md-7 {
   width: 58.3333%;
@@ -138,3 +138,28 @@ h1, h2, h3 {
   width: 75%;
   margin: 10px;
 }
+.col-md-12 {
+  width: 100%;
+  margin: 10px;
+}
+
+@media only screen and (max-width: 1200px) {
+  .row {
+    display: flex;
+    flex-direction: column;
+    /* align-items: flex-start; */
+    padding: 15px;
+    margin: 10px 0;
+  }
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9{
+    width: 100%;
+    margin: 10px;  
+  }
+}
+
+/* @media only screen and (max-width: 600px) {
+  .col-md-6 {
+    width: 100%;
+    margin: 10px;  
+  }
+} */
